--- a/frontend/index.html
+++ b/frontend/index.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>SynApp</title>
     <link rel="stylesheet" type="text/css" href="https://unpkg.com/react-tooltip/dist/index.css" />
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
+
 
   </head>
   <body>
